// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get all seasons with recipes Returns a full list of season data 1`] = `
Array [
  Object {
    "id": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
    "name": "January",
    "recipes": Array [
      Object {
        "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
        "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
        "isVegan": false,
        "isVegetarian": false,
        "linkUrl": "https://apple-beetroot-and-cheese.com",
        "name": "Apple, Beetroot & Meat",
      },
      Object {
        "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
        "imageUrlSmall": "https://apple-and-cheese.com/image",
        "isVegan": false,
        "isVegetarian": true,
        "linkUrl": "https://apple-and-cheese.com",
        "name": "Apple, Cheese & Onion",
      },
      Object {
        "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
        "imageUrlSmall": "https://pickled-beetroot.com/image",
        "isVegan": true,
        "isVegetarian": false,
        "linkUrl": "https://pickled-beetroot.com",
        "name": "Pickled Beetroot",
      },
    ],
    "seasonIndex": "0",
  },
  Object {
    "id": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
    "name": "February",
    "recipes": Array [
      Object {
        "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
        "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
        "isVegan": false,
        "isVegetarian": false,
        "linkUrl": "https://apple-beetroot-and-cheese.com",
        "name": "Apple, Beetroot & Meat",
      },
      Object {
        "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
        "imageUrlSmall": "https://apple-and-cheese.com/image",
        "isVegan": false,
        "isVegetarian": true,
        "linkUrl": "https://apple-and-cheese.com",
        "name": "Apple, Cheese & Onion",
      },
      Object {
        "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
        "imageUrlSmall": "https://pickled-beetroot.com/image",
        "isVegan": true,
        "isVegetarian": false,
        "linkUrl": "https://pickled-beetroot.com",
        "name": "Pickled Beetroot",
      },
    ],
    "seasonIndex": "1",
  },
  Object {
    "id": "f4812071-b0e2-4255-8ccf-e38768ad0c3c",
    "name": "March",
    "recipes": Array [
      Object {
        "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
        "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
        "isVegan": false,
        "isVegetarian": false,
        "linkUrl": "https://apple-beetroot-and-cheese.com",
        "name": "Apple, Beetroot & Meat",
      },
      Object {
        "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
        "imageUrlSmall": "https://apple-and-cheese.com/image",
        "isVegan": false,
        "isVegetarian": true,
        "linkUrl": "https://apple-and-cheese.com",
        "name": "Apple, Cheese & Onion",
      },
      Object {
        "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
        "imageUrlSmall": "https://pickled-beetroot.com/image",
        "isVegan": true,
        "isVegetarian": false,
        "linkUrl": "https://pickled-beetroot.com",
        "name": "Pickled Beetroot",
      },
    ],
    "seasonIndex": "2",
  },
]
`;

exports[`Get single season with recipes when an isVegan filter is applied Retrieves the expected data 1`] = `
Object {
  "id": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
  "name": "February",
  "recipes": Array [
    Object {
      "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
      "imageUrlSmall": "https://pickled-beetroot.com/image",
      "isVegan": true,
      "isVegetarian": false,
      "linkUrl": "https://pickled-beetroot.com",
      "name": "Pickled Beetroot",
    },
  ],
  "seasonIndex": "1",
}
`;

exports[`Get single season with recipes when an isVegetarian filter is applied Retrieves the expected data 1`] = `
Object {
  "id": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
  "name": "January",
  "recipes": Array [
    Object {
      "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
      "imageUrlSmall": "https://apple-and-cheese.com/image",
      "isVegan": false,
      "isVegetarian": true,
      "linkUrl": "https://apple-and-cheese.com",
      "name": "Apple, Cheese & Onion",
    },
    Object {
      "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
      "imageUrlSmall": "https://pickled-beetroot.com/image",
      "isVegan": true,
      "isVegetarian": false,
      "linkUrl": "https://pickled-beetroot.com",
      "name": "Pickled Beetroot",
    },
  ],
  "seasonIndex": "0",
}
`;

exports[`Get single season with recipes when both isVegan and isVegetarian filter is applied Retrieves the expected data 1`] = `
Object {
  "id": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
  "name": "February",
  "recipes": Array [
    Object {
      "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
      "imageUrlSmall": "https://pickled-beetroot.com/image",
      "isVegan": true,
      "isVegetarian": false,
      "linkUrl": "https://pickled-beetroot.com",
      "name": "Pickled Beetroot",
    },
  ],
  "seasonIndex": "1",
}
`;

exports[`Get single season with recipes when the season has no recipes Retrieves a single season 1`] = `
Object {
  "id": "f4812071-b0e2-4255-8ccf-e38768ad0c3c",
  "name": "March",
  "recipes": Array [],
  "seasonIndex": "2",
}
`;

exports[`Get single season with recipes when the season has recipes Retrieves a single season with food and recipe data 1`] = `
Object {
  "id": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
  "name": "January",
  "recipes": Array [
    Object {
      "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
      "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
      "isVegan": false,
      "isVegetarian": false,
      "linkUrl": "https://apple-beetroot-and-cheese.com",
      "name": "Apple, Beetroot & Meat",
    },
    Object {
      "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
      "imageUrlSmall": "https://apple-and-cheese.com/image",
      "isVegan": false,
      "isVegetarian": true,
      "linkUrl": "https://apple-and-cheese.com",
      "name": "Apple, Cheese & Onion",
    },
    Object {
      "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
      "imageUrlSmall": "https://pickled-beetroot.com/image",
      "isVegan": true,
      "isVegetarian": false,
      "linkUrl": "https://pickled-beetroot.com",
      "name": "Pickled Beetroot",
    },
  ],
  "seasonIndex": "0",
}
`;
